logs/watchdog_20251012_0245.log
[12/10/2025  2:45:01,73] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025  2:45:01,94] END WATCHDOG 
